mehul removed paridhan, registrations closed

--- a/MobileWebsite/event/fashion/paridhan.html
+++ b/MobileWebsite/event/fashion/paridhan.html
@@ -86,7 +86,7 @@
                             <br><br>Paridhan is a celebration of style, confidence and elegance. The participants will captivate your heart, take your breath away and leave you speechless with their flawless beauty and grace!
 
                             <br><br>So, let the unparalleled aura of Paridhan enrapture you at Engifest Infinity!
-
+                            <br><br>Registrations are closed. 
                             <br><br>Judging Criteria-
                             <br><br>1. Theme: <br>INFINITY, Depiction of Theme, Designing, Use of Props.
                             <br><br>2. Constraint: <br>Uniqueness, Innovation and Improvisation in terms of executing the transformation.
@@ -108,7 +108,7 @@
                             <br>10. The decision of the judges will be final and binding.
                             </p>
                             <p id="event-desc" class="left">
-                                <br><br>Contact : <br> Mehul (PR Cordinator) - 9599436329<br>
+                                <br><br>Contact : <br>
                                 Sushant Kharthol - 9582867935<br>
                                 Shakuntala - 8826826948<br>
                                 Kushagra Samarth - 999926988
@@ -117,7 +117,8 @@
                                 <br>Time: 4:00 pm
                                 <br>Venue: Concert Ground
                             </p>
-                            <a href="https://goo.gl/forms/dDkRYD4abwoWhwjf1" class="myButton">Register</a>
+                            <br><br><p id="event-desc" class="left">Registrations are closed. </p>
+                            <!-- <a href="https://goo.gl/forms/dDkRYD4abwoWhwjf1" class="myButton">Register</a> -->
                             <ul class="event-list">
                                 <li id="last-list-item"> 
                                     <a href="../fashion.html">Back to Fashion Events</a>
