--- a/index.html
+++ b/index.html
@@ -5300,7 +5300,7 @@
 						                <li class="active"><a data-toggle="tab" href="#paridhanhome">Info</a></li>
 						                <li><a data-toggle="tab" href="#paridhanmenu1">Rules</a></li>
 						                <li><a data-toggle="tab" href="#paridhanmenu2">Contact</a></li>
-						                <a href="https://goo.gl/forms/dDkRYD4abwoWhwjf1" target="_blank" class="register"><button class="btn pull-right" >Register</button></a>
+						                <!-- <a href="#" target="_blank" class="register"><button class="btn pull-right" >Register</button></a> -->
 						            </ul>
 
 						            <div class="tab-content">
@@ -5324,7 +5324,8 @@
 						                </div>
 						                <div id="paridhanmenu1" class="tab-pane fade">
 						                    <div class="rule-content">
-						                    	Judging Criteria<br>
+						                    	Registrations are closed. <br><br>
+						                    	Judging Criteria: <br>
 
 												1. Theme: INFINITY, Depiction of Theme, Designing, Use of Props.<br>
 
@@ -5393,7 +5394,6 @@
 
 						                <div id="paridhanmenu2" class="tab-pane fade">
 						                    <div class="contact-content">
-						                        Mehul (PR Representative) - 9599436329<br>
 						                        Sushant Kharthol - 9582867935  <br>
 						                        Shakuntala - 8826826948<br>
 						                        Kushagra Samarth - 999926988<br>
