sponsors updated,lagori added

--- a/index.html
+++ b/index.html
@@ -4865,7 +4865,7 @@
 						                        <div class="info-col">
 						                            <b>Date: </b>18 Feb<br>
 						                            <b>Time: </b>7:00 pm<br>
-						                            <b>Venue: </b>Sports Complex<br>
+						                            <b>Venue: </b>Pepsi Concert Ground<br>
 						                        </div>
 						                        <div class="info-col"></div>
 						                    </div>
@@ -4895,7 +4895,7 @@
 						                        <div class="info-col">
 						                            <b>Date: </b>20 Feb<br>
 						                            <b>Time: </b>7:00 pm<br>
-						                            <b>Venue: </b>Sports Complex<br>
+						                            <b>Venue: </b>Pepsi Concert Ground<br>
 						                        </div>
 						                        <div class="info-col"></div>
 						                    </div>
@@ -4913,19 +4913,18 @@
 						                <div id="rock-nighthome" class="tab-pane fade in active">
 						                    <div class="info-content" style="overflow-y: auto;">
 						                        <div class="info-row">
-						                            "One good thing about music, when it hits you, you feel no pain."
-													-Bob Marley<br><br>
-
-													Engifest Infinity brings to you the biggest celebration of Rock Music in the North of India. Feel the base pounding in your chest, feel the blood rushing in your veins, for this will make you fall in love with music over and over again.<br><br>
-
-													Experience the night's magnificence and grandeur as the nationwide famous Rock stars set the stage on fire.<br><br>
-
-													You don't want to miss it, not now, not ever. Infinite is all that we guarantee.
+						                            "Boom Shankar, Boom Shankar, Bolo Hari Om Shankar"<br>
+													Does it not a strike a note?<br>
+													Not a long time back, a group of "Mental People", set their feet on the stage and dazzled the crowd. With their hypnotic music and magnetizing aura, these guys gave us one hell of a night to remember.
+													Who would not give an eyeteeth for shouting "Once More", just another time to their soul stirring and funky melody?<br>
+													Yes, guys. The wait is over.<br>
+													Pepsi presents LAGORI is back again for stealing your hearts. And this time they have a surprise in store.
+													Free up your schedules and catch them live in Engifest'17 at Delhi Technological University on 19th of February.
 													<br><br>
 
 						                            <b>Date: </b>19 Feb<br>
 						                            <b>Time: </b>7:00 pm<br>
-						                            <b>Venue: </b>Sports Complex<br>
+						                            <b>Venue: </b>Pepsi Concert Ground<br>
 						                        </div>
 						                    </div>
 						                </div>
@@ -4947,7 +4946,7 @@
 						                        <div class="info-col">
 						                            <b>Date: </b>18 Feb<br>
 						                            <b>Time: </b>5:00 pm<br>
-						                            <b>Venue: </b>OAT<br>
+						                            <b>Venue: </b>Stryker OAT<br>
 						                        </div>
 						                        <div class="info-col"></div>
 						                    </div>
@@ -4972,7 +4971,7 @@
 						                        <div class="info-col">
 						                            <b>Date: </b>20 Feb<br>
 						                            <b>Time: </b>4:00 pm<br>
-						                            <b>Venue: </b>OAT<br>
+						                            <b>Venue: </b>Stryker OAT<br>
 						                        </div>
 						                        <div class="info-col"></div>
 						                    </div>
