--- a/MobileWebsite/event/dance/stfu.html
+++ b/MobileWebsite/event/dance/stfu.html
@@ -60,6 +60,7 @@
                 <li><a href="../../register.html">Registration</a></li>
                 <li><a href="../pronight.html">Pro Shows</a></li>
                 <li><a href="../../events.html">Events</a></li>
+                <li><a href="../../schedule.html">Schedule</a></li>
                 <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfDE9DQu8k-7vUop34rlmCDzLWTV5Xiyb2fmGZpfbPCr3YKKQ/viewform">Accommodations</a></li>
                 <!-- <li><a href="#">Sponsors</a></li> -->
                 <li><a href="../../contact.html">Contact Us</a></li>
@@ -138,7 +139,12 @@
                             <p id="event-desc" class="left">
                                 <br>Contact :
                                 <br>Sujal (Team Head) - 9871281295, 9868884344
-                                <br><br><br>Date: 20 Feb
+                                <br><br><br>Workshop: 
+                                <br>Date: 19 Feb
+                                <br>Time: 10:00 am
+                                <br>Venue: Wind Point
+                                <br><br><br>Main Event:
+                                <br>Date: 20 Feb
                                 <br>Time: 10:00 am
                                 <br>Venue: OAT
                             </p>
