--- a/index.html
+++ b/index.html
@@ -4363,6 +4363,11 @@
 												In this event, various street dancers will thrill you with their immaculate dancing styles. Be a part of the crowd that will witness some of the top dancers of our college battle it out for the prize. The competition was judged by International world class dancers Boogie Frantick, Mighty ZULU Kings and The GR818ERS. So, get ready to witness the ultimate dancing event!!
 						                        </div>
 						                        <div class="info-col">
+						                        	<b>Workshop:</b> <br>
+					                                <b>Date: </b>19 Feb<br>
+					                                <b>Time: </b>10:00 am<br>
+					                                <b>Venue: </b>Wind Point<br><br>
+					                                <b>Main Event:</b><br>
 						                            <b>Date: </b>20 Feb<br>
 						                            <b>Time: </b>10:00 am<br>
 						                            <b>Venue: </b>Stryker OAT<br>
