--- a/MobileWebsite/event/drama.html
+++ b/MobileWebsite/event/drama.html
@@ -60,6 +60,7 @@
                 <li><a href="../register.html">Registration</a></li>
                 <li><a href="pronight.html">Pro Shows</a></li>
                 <li><a href="../events.html">Events</a></li>
+                <li><a href="../schedule.html">Schedule</a></li>
                 <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfDE9DQu8k-7vUop34rlmCDzLWTV5Xiyb2fmGZpfbPCr3YKKQ/viewform">Accommodations</a></li>
                 <!-- <li><a href="#">Sponsors</a></li> -->
                 <li><a href="../contact.html">Contact Us</a></li>
