Ayush Goel team added

--- a/team.html
+++ b/team.html
@@ -599,7 +599,7 @@
                 </div>
                 <div class="row flex-container">
                     <div class="flex-item">
-                        <div class="contact-image"><img class ="img" src="assets/team/Ayush Goel.jpg"></div> 
+                        <div class="contact-image"><img class ="img" src="assets/team/Ayush Goel.JPG"></div> 
                         <div class="name">Ayush Goel</div>
                         <div class="designation">Head</div>
                     </div>
