--- a/MobileWebsite/schedule/day1.html
+++ b/MobileWebsite/schedule/day1.html
@@ -111,7 +111,7 @@
                                     <a href="../event/pro_night/livewire.html">Live Wire - Sunidhi Chauhan (Concert Ground)</a>
                                 </li>
                                 <li id="last-list-item"> 
-                                    <a href="../events.html">Back to Events</a>
+                                    <a href="../schedule.html">Back to Schedule</a>
                                 </li>
                             </ul>
                         </center>
