--- a/MobileWebsite/schedule/day2.html
+++ b/MobileWebsite/schedule/day2.html
@@ -117,7 +117,7 @@
                                     <a href="../event/pro_night/rock.html">Rock Night - Lagori (Concert Ground)</a>
                                 </li>
                                 <li id="last-list-item"> 
-                                    <a href="../events.html">Back to Events</a>
+                                    <a href="../schedule.html">Back to Schedule</a>
                                 </li>
                             </ul>
                         </center>
