--- a/MobileWebsite/schedule/day3.html
+++ b/MobileWebsite/schedule/day3.html
@@ -108,7 +108,7 @@
                                     <a href="../event/pro_night/edm.html">EDM Night - Nucleya (Concert Ground)</a>
                                 </li>
                                 <li id="last-list-item"> 
-                                    <a href="../events.html">Back to Events</a>
+                                    <a href="../schedule.html">Back to Schedule</a>
                                 </li>
                             </ul>
                         </center>
