Schedule timing added

--- a/MobileWebsite/event/informal_events/standup.html
+++ b/MobileWebsite/event/informal_events/standup.html
@@ -83,11 +83,11 @@
                             
 							<br>Stay tuned for more.
                             </p>
-                            <!-- <p id="event-desc" class="left">
-                                Date: 20 Feb
-                                <br>Time: 7:00 pm
-                                <br>Venue: Concert Ground
-                            </p> -->
+                            <p id="event-desc" class="left">
+                                Date: 19 Feb
+                                <br>Time: 6:00 pm
+                                <br>Venue: OAT
+                            </p>
                             <!-- <a href="https://goo.gl/forms/3vyaN0YukfkJOVim1" class="myButton">Register</a> -->
                             <ul class="event-list">
                                 <li id="last-list-item"> 
