--- a/MobileWebsite/schedule/day1.html
+++ b/MobileWebsite/schedule/day1.html
@@ -81,34 +81,31 @@
                         <center>
                             <ul class="event-list">
                                 <li> 
-                                    <a href="../event/music/balladeer.html">Balladeers (Convocation Hall)</a> 
+                                    <a href="../event/music/balladeer.html">Balladeers (Convocation Hall | 9 am)</a> 
                                 </li>
                                 <li> 
-                                    <a href="../event/music/vocal.html">Vocalicious (Convocation Hall)</a>
+                                    <a href="../event/music/vocal.html">Vocalicious (Convocation Hall | 2 pm)</a>
                                 </li>
                                 <li> 
-                                    <a href="../event/misc_event/shakedown.html">Shakedown (Boys Hostel Road)</a>
+                                    <a href="../event/dance/anusthan.html">Anushthaan (Auditorium | 10 am)</a>
                                 </li>
                                 <li> 
-                                    <a href="../event/dance/anusthan.html">Anushthaan (Auditorium)</a>
+                                    <a href="../event/literary/dristikon.html">दृष्टिकोण (SPS Hall | 10 am)</a>
                                 </li>
                                 <li> 
-                                    <a href="../event/literary/dristikon.html">दृष्टिकोण (SPS Hall)</a>
+                                    <a href="javascript:void(0)">YouTube Fan Fiesta (OAT | 10 am)</a>
                                 </li>
                                 <li> 
-                                    <a href="javascript:void(0)">YouTube Fan Fiesta (OAT)</a>
+                                    <a href="../event/art/shoe.html">Shoe Painting (Edusat Hall | 10 am)</a>
                                 </li>
                                 <li> 
-                                    <a href="../event/art/shoe.html">Shoe Painting (Edusat Hall)</a>
+                                    <a href="../event/literary/mixed_bag.html">Mixed Bag (SPS Hall | 2 pm)</a>
                                 </li>
                                 <li> 
-                                    <a href="../event/literary/mixed_bag.html">Mixed Bag (SPS Hall)</a>
+                                    <a href="../event/pro_night/shtuby.html">SHTUBY Drum &amp; Red (OAT | 5 pm)</a>
                                 </li>
                                 <li> 
-                                    <a href="../event/pro_night/shtuby.html">SHTUBY Drum &amp; Red (OAT)</a>
-                                </li>
-                                <li> 
-                                    <a href="../event/pro_night/livewire.html">Live Wire - Sunidhi Chauhan (Concert Ground)</a>
+                                    <a href="../event/pro_night/livewire.html">Live Wire - Sunidhi Chauhan (Concert Ground | 8 pm)</a>
                                 </li>
                                 <li id="last-list-item"> 
                                     <a href="../schedule.html">Back to Schedule</a>
