--- a/MobileWebsite/schedule/day2.html
+++ b/MobileWebsite/schedule/day2.html
@@ -81,40 +81,46 @@
                         <center>
                             <ul class="event-list">
                                 <li> 
-                                    <a href="../event/music/vrind.html">Vrind (Convocation Hall)</a> 
+                                    <a href="../event/music/vrind.html">Vrind (Convocation Hall | 9 am)</a> 
                                 </li>
                                 <li> 
-                                    <a href="../event/music/idol.html">Engi Idol (Convocation Hall)</a>
+                                    <a href="../event/music/idol.html">Engi Idol (Convocation Hall | 3 pm)</a>
                                 </li>
                                 <li> 
-                                    <a href="../event/dance/spandhan.html">Spandan Solo (OAT)</a>
+                                    <a href="../event/dance/spandhan.html">Spandan Solo (OAT  | 10 am)</a>
                                 </li>
                                 <li> 
-                                    <a href="../event/dance/spandhan.html">Spandan Group (Auditorium)</a>
+                                    <a href="../event/dance/spandhan.html">Spandan Group (Auditorium | 10 am)</a>
                                 </li>
                                 <li> 
-                                    <a href="../event/drama/nukkad.html">Nukkad (MechC Parking)</a>
+                                    <a href="../event/drama/nukkad.html">Nukkad (MechC Parking | 10 am)</a>
                                 </li>
                                 <li> 
-                                    <a href="../event/art/furious.html">Art &amp; Furious (Edusat Hall)</a>
+                                    <a href="../event/misc_event/kaleidoscope.html">Parchhayi- Kaleidoscope (SPS Hall 13  | 10 am)</a>
                                 </li>
                                 <li> 
-                                    <a href="../event/misc_event/kaleidoscope.html">Parchhayi- Kaleidoscope (SPS Hall 13)</a>
+                                    <a href="../event/literary/kavyajana.html">काव्यांजना (SPS Hall | 11 am)</a>
                                 </li>
                                 <li> 
-                                    <a href="../event/literary/kavyajana.html">काव्यांजना (SPS Hall)</a>
+                                    <a href="../event/art/furious.html">Art &amp; Furious (Edusat Hall | 11 am)</a>
                                 </li>
                                 <li> 
-                                    <a href="../event/fashion/paridhan.html">Paridhan (Concert Ground)</a>
+                                    <a href="../event/dance/stfu.html">Switch the Funk Up Workshop (Wind Point | 10 am)</a>
                                 </li>
                                 <li> 
-                                    <a href="../event/dance/stfu.html">Switch the Funk Up Workshop (Wind Point)</a>
+                                    <a href="../event/misc_event/shakedown.html">Shakedown (Boys Hostel Road | 10 am)</a>
                                 </li>
                                 <li> 
-                                    <a href="../event/literary/creative_writing.html">Creative Writing (SPS Hall)</a>
+                                    <a href="../event/literary/creative_writing.html">Creative Writing (SPS Hall | 3 pm)</a>
                                 </li>
                                 <li> 
-                                    <a href="../event/pro_night/rock.html">Rock Night - Lagori (Concert Ground)</a>
+                                    <a href="../event/fashion/paridhan.html">Paridhan (Concert Ground | 2 pm)</a>
+                                </li>
+                                <li> 
+                                    <a href="../event/informal_events/standup.html">Stand Up Comedy (OAT | 6 pm)</a>
+                                </li>
+                                <li> 
+                                    <a href="../event/pro_night/rock.html">Rock Night - Lagori (Concert Ground | 8 pm)</a>
                                 </li>
                                 <li id="last-list-item"> 
                                     <a href="../schedule.html">Back to Schedule</a>
