--- a/MobileWebsite/schedule/day3.html
+++ b/MobileWebsite/schedule/day3.html
@@ -81,31 +81,37 @@
                         <center>
                             <ul class="event-list">
                                 <li> 
-                                    <a href="../event/music/show.html">Two's A Show (Convocation Hall)</a> 
+                                    <a href="../event/music/show.html">Two's A Show (Convocation Hall | 10 am)</a> 
                                 </li>
                                 <li> 
-                                    <a href="../event/music/alchemy.html">Acoustic Alchemy (Wind Point)</a>
+                                    <a href="../event/music/alchemy.html">Acoustic Alchemy (Wind Point | 2 pm)</a>
                                 </li>
                                 <li> 
-                                    <a href="../event/drama/natya.html">Natya (Auditorium)</a>
+                                    <a href="javascript:void(0)">KickBack - KTM Stuny Show by Monty (Hostel Road | 10 am)</a>
                                 </li>
                                 <li> 
-                                    <a href="../event/dance/stfu.html">Switch the Funk Up (OAT)</a>
+                                    <a href="../event/drama/natya.html">Natya (Auditorium | 10 am)</a>
                                 </li>
                                 <li> 
-                                    <a href="../event/literary/wow.html">War of Words (SPS Hall)</a>
+                                    <a href="../event/dance/stfu.html">Switch the Funk Up (OAT | 11 am)</a>
                                 </li>
                                 <li> 
-                                    <a href="../event/literary/jam.html">Just A Minute (SPS Hall)</a>
+                                    <a href="../event/literary/wow.html">War of Words (SPS Hall | 10 am)</a>
                                 </li>
                                 <li> 
-                                    <a href="../event/art/three.html">3 Dimensional Art (Edusat Hall)</a>
+                                    <a href="../event/literary/jam.html">Just A Minute (SPS Hall | 11 am)</a>
                                 </li>
                                 <li> 
-                                    <a href="../event/pro_night/shaam.html">Shaam, Sama aur Shayar - Piyush Sharma (OAT)</a>
+                                    <a href="../event/art/three.html">3 Dimensional Art (Edusat Hall | 11 am)</a>
                                 </li>
                                 <li> 
-                                    <a href="../event/pro_night/edm.html">EDM Night - Nucleya (Concert Ground)</a>
+                                    <a href="javascript:void(0)">Faculty Students' Programme (Auditorium | 4 pm)</a>
+                                </li>
+                                <li> 
+                                    <a href="../event/pro_night/shaam.html">Shaam, Sama aur Shayar - Piyush Sharma (OAT | 5 pm)</a>
+                                </li>
+                                <li> 
+                                    <a href="../event/pro_night/edm.html">EDM Night - Nucleya (Concert Ground | 8 pm)</a>
                                 </li>
                                 <li id="last-list-item"> 
                                     <a href="../schedule.html">Back to Schedule</a>
